--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -11,6 +11,7 @@
 
 
     <ImageView
+        android:contentDescription="@string/logo_desc"
         android:id="@+id/imageView2"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -24,12 +25,12 @@
         android:id="@+id/emailText"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/imageView2"
+        android:layout_below="@+id/textView10"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:hint="Email Address" />
+        android:hint="@string/email" />
 
     <EditText
         android:id="@+id/password1Text"
@@ -39,7 +40,7 @@
         android:layout_below="@+id/emailText"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword" />
 
     <EditText
@@ -50,7 +51,7 @@
         android:layout_below="@+id/password1Text"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Re-enter password"
+        android:hint="@string/password2"
         android:inputType="textPassword" />
 
     <TextView
@@ -60,14 +61,15 @@
         android:layout_below="@+id/register"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textSize="13dp"
-        android:text="Already a member? Sign in."
+        android:textSize="13sp"
+        android:text="@string/member"
         android:clickable="true"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
         android:layout_height="50dp"
         app:cardBackgroundColor="#f4767a"
+        app:cardElevation="10dp"
         app:cardCornerRadius="25dp"
         android:clickable="true"
         android:layout_below="@+id/password2Text"
@@ -83,9 +85,20 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register"
+                android:text="@string/register"
                 android:layout_centerInParent="true"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textSize="23sp"
+        android:text="@string/create_desc"
+        android:textStyle="bold"/>
 
 </RelativeLayout>
