--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -10,6 +10,7 @@
     android:focusableInTouchMode="true">
 
     <ImageView
+        android:contentDescription="@string/logo_desc"
         android:id="@+id/imageView4"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -25,8 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
-        android:text="Forgot Password?"
-        android:textSize="17dp"
+        android:text="@string/forgot"
+        android:textSize="17sp"
         android:textStyle="bold"
         android:layout_below="@+id/imageView4"
         android:layout_centerHorizontal="true" />
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
         android:textAlignment="center"
-        android:text="We just need your registered email to send your password reset instructions."
+        android:text="@string/password_desc"
         android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true" />
 
@@ -48,14 +49,14 @@
         android:layout_marginTop="26dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:hint="Email Address"
+        android:hint="@string/email"
         android:layout_below="@+id/textView7"
         android:layout_centerHorizontal="true" />
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:elevation="10dp"
+        app:cardElevation="10dp"
         app:cardBackgroundColor="#f4767a"
         app:cardCornerRadius="25dp"
         android:layout_below="@+id/emailText"
@@ -72,7 +73,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reset Password"
+                android:text="@string/reset"
                 android:layout_centerInParent="true"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -85,5 +86,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
         android:clickable="true"
-        android:text="Back" />
+        android:text="@string/back" />
 </RelativeLayout>
