--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Choose Your Bus Stop!!!"
+        android:text="Choose a Bus Stop:"
         android:gravity="center"
         android:textSize="30sp"
         android:textColor="@android:color/black" />
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus 1"
+            android:text="Bus Stop #1234"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -33,7 +33,7 @@
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Select" />
     </LinearLayout>
 
     <LinearLayout
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus 2"
+            android:text="Bus Stop #2345"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -54,7 +54,7 @@
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Select" />
     </LinearLayout>
 
     <LinearLayout
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus 3"
+            android:text="Bus Stop #3456"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -75,7 +75,7 @@
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Select" />
     </LinearLayout>
 
     <LinearLayout
@@ -87,7 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus 4"
+            android:text="Bus Stop #4567"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -96,7 +96,7 @@
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Select" />
     </LinearLayout>
 
     <LinearLayout
@@ -108,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus 5"
+            android:text="Bus Stop #5678"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -117,6 +117,6 @@
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Select" />
     </LinearLayout>
 </LinearLayout>
