--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        app:cardBackgroundColor="@android:color/holo_red_light"
+        app:cardBackgroundColor="@android:color/holo_red_dark"
         app:cardCornerRadius="25dp"
         app:cardElevation="10dp"
         android:layout_below="@+id/passwordText"
