--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,14 @@
     android:gravity="center_vertical"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
-    android:background="@android:color/darker_gray">
+    android:background="@android:color/white">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Choose a Bus Stop:"
         android:gravity="center"
         android:textSize="30sp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/holo_red_dark" />
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus Stop #1234"
+            android:text="Link XX:"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus Stop #2345"
+            android:text="Link XX:"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus Stop #3456"
+            android:text="Link XX:"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -87,7 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus Stop #4567"
+            android:text="Link XX:"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
@@ -108,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bus Stop #5678"
+            android:text="Link XX:"
             android:textSize="22sp"
             android:textColor="@android:color/black" />
 
