--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp">
 
     <ImageView
         android:id="@+id/imageview_circle"
@@ -10,8 +12,7 @@
         android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginStart="46dp"
         app:srcCompat="@drawable/circle" />
 
     <ImageView
@@ -28,10 +29,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageView5"
-        android:layout_marginStart="21dp"
-        android:textSize="25dp"
+        android:layout_marginStart="13dp"
         android:layout_toEndOf="@+id/imageview_circle"
-        android:text="Route : 434" />
+        android:text="Route : 434"
+        android:textSize="25dp" />
 
     <TextView
         android:id="@+id/textview_arrival"
@@ -41,4 +42,5 @@
         android:layout_alignStart="@+id/textview_route"
         android:text="14 - 15 minutes"
         android:textSize="15dp" />
+
 </RelativeLayout>
