--- a/app/src/main/res/layout/admin.xml
+++ b/app/src/main/res/layout/admin.xml
@@ -1,27 +1,37 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@android:color/darker_gray">
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Admin Mode"
-        android:textSize="22sp"
-        android:textColor="@android:color/black"/>
-
-    <Button
-        android:id="@+id/logOut"
-        android:layout_width="165dp"
-        android:layout_height="wrap_content"
-        android:text="Log Out" />
-
+    android:background="@android:color/white"
+    >
     <com.google.android.gms.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</LinearLayout>
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_signout"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="14dp"
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:clickable="true"
+        android:tint="@android:color/white"
+        app:srcCompat="@drawable/sign_out" />
+
+
+</RelativeLayout>
