--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,113 +11,12 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="56dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <TextView
-        android:id="@+id/textView_route1"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_alignStart="@+id/textView_route2"
-        android:lines="2"
-        android:text="@string/route1"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginEnd="31dp"
-        android:layout_marginTop="64dp"
-        android:text="Select" />
-
-    <TextView
-        android:id="@+id/textView_route2"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button3"
-        android:layout_alignStart="@+id/textView_route3"
-        android:lines="2"
-        android:text="@string/route2"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_alignStart="@+id/button1"
-        android:layout_below="@+id/textView_route1"
-        android:layout_marginTop="39dp"
-        android:text="Select" />
-
-    <TextView
-        android:id="@+id/textView_route3"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button4"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="18dp"
-        android:lines="2"
-        android:text="@string/route3"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_alignStart="@+id/button2"
-        android:layout_below="@+id/button2"
-        android:layout_marginTop="25dp"
-        android:text="Select" />
-
-    <TextView
-        android:id="@+id/textView_route4"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button5"
-        android:layout_alignStart="@+id/textView_route3"
-        android:lines="2"
-        android:text="@string/route4"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_alignStart="@+id/button3"
-        android:layout_below="@+id/button3"
-        android:layout_marginTop="30dp"
-        android:text="Select" />
-
-    <TextView
-        android:id="@+id/textView_route5"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button5"
-        android:layout_alignStart="@+id/textView_route4"
-        android:lines="2"
-        android:text="@string/route5"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_alignStart="@+id/button4"
-        android:layout_below="@+id/button4"
-        android:layout_marginTop="30dp"
-        android:text="Select" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_signout"
@@ -131,6 +30,13 @@
         android:clickable="true"
         android:tint="@android:color/white"
         app:srcCompat="@drawable/sign_out" />
+
+    <ListView
+        android:id="@+id/listview_route"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar" />
 
 
 </RelativeLayout>
